Motion thumbnails, desc. and iFrames added

--- a/motion.html
+++ b/motion.html
@@ -64,6 +64,9 @@ $(document).on('lity:ready', function(event, $lightbox) {
 <div class="container mx-auto">
 <div class="flex flex-wrap w-full container mx-auto lg:-mx-4 mb-32">
 
+	<div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
+ <a href="https://www.youtube.com/watch?v=aZmwnHTRnGc" data-lity data-title="CSUN Student Life - Growth: Beyond the Classroom Episode 2" data-desc="Cinematographer, Editor, SFX"><img src="motionthumb/thumb9.jpg"></a>  </div>
+
   <div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
  <a href="https://www.youtube.com/watch?v=1H7bqSu00og" data-lity data-title="Stop Motion Test" data-desc="2018"><img src="motionthumb/thumb1.jpg" ></a></div>
 
@@ -71,25 +74,24 @@ $(document).on('lity:ready', function(event, $lightbox) {
  <a href="https://www.youtube.com/watch?v=a0UuivpQo28" data-lity data-title="Outside" data-desc="Cinematographer, Editor, SFX"><img src="motionthumb/thumb2.jpg"></a>  </div>
 
   <div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
- <a href="gallery/image15.JPG" data-lity data-lity-desc="Photo of a flower" data-title="TESTEST" data-desc="testest"><img src="motionthumb/thumb3.jpg"></a>  </div>
+ <a href="https://www.youtube.com/watch?v=WYvcxS8EGp4" data-lity data-title="Teenline Promotional Video" data-desc="Cinematographer, Editor"><img src="motionthumb/thumb3.jpg"></a>  </div>
 
   <div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
- <a href="gallery/image15.JPG" data-lity data-lity-desc="Photo of a flower" data-title="TESTEST" data-desc="testest"><img src="motionthumb/thumb4.jpg"></a>  </div>
+ <a href="https://www.youtube.com/watch?v=4HMnJGnxURY" data-lity data-title="Fuck Boy Away" data-desc="Cinematographer, SFX"><img src="motionthumb/thumb4.jpg"></a>  </div>
 
   <div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
- <a href="gallery/image06.JPG" data-lity data-lity-desc="Photo of a flower" data-title="TESTEST" data-desc="testest"><img src="motionthumb/thumb5.jpg"></a>  </div>
+ <a href="https://www.youtube.com/watch?v=k0tQrRsMkeo" data-lity data-title="Girls Gone Gore" data-desc="Writer, Cinematographer, Editor"><img src="motionthumb/thumb5.jpg"></a>  </div>
 
   <div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
- <a href="gallery/image07.JPG" data-lity data-lity-desc="Photo of a flower" data-title="TESTEST" data-desc="testest"><img src="motionthumb/thumb6.jpg"></a>  </div>
+ <a href="https://www.youtube.com/watch?v=sUQGZL3LXNk" data-lity data-title="Harajuku Walk 2016" data-desc="Cinematographer, Editor"><img src="motionthumb/thumb6.jpg"></a>  </div>
 
   <div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
- <a href="gallery/image08.JPG" data-lity data-lity-desc="Photo of a flower" data-title="TESTEST" data-desc="testest"><img src="motionthumb/thumb7.jpg"></a>  </div>
+ <a href="https://www.youtube.com/watch?v=X1hqAayq4is" data-lity data-title="Outer Space Girl" data-desc="Cinematographer, Editor, SFX, Music"><img src="motionthumb/thumb7.jpg"></a>  </div>
 
   <div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
- <a href="gallery/image09.JPG" data-lity data-lity-desc="Photo of a flower" data-title="TESTEST" data-desc="testest"><img src="motionthumb/thumb8.jpg"></a>  </div>
+ <a href="https://www.youtube.com/watch?v=2zqMP6g0Fxk" data-lity data-title="Alex Romo" data-desc="Audio, Cinematographer"><img src="motionthumb/thumb8.jpg"></a>  </div>
 
-  <div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
- <a href="gallery/image10.JPG" data-lity data-lity-desc="Photo of a flower" data-title="TESTEST" data-desc="testest"><img src="motionthumb/thumb9.jpg"></a>  </div>
+  
 
 </div>
 </div>
