Logo changed to PNG

--- a/motion.html
+++ b/motion.html
@@ -19,10 +19,9 @@
 <body>
 
 <header class="header p-3">
-  <a href="index.html" alt id="logo"><svg xmlns="http://www.w3.org/2000/svg" width="320" height="54" viewBox="0 0 320 54">
-	 				 <text id="Steffi-Ann_Mendoza" data-name="Steffi-Ann Mendoza" transform="translate(1 43)" fill="#fff" stroke="#fff" stroke-width="1" font-size="50" font-family="MoonFlower, Moon Flower" letter-spacing="0.05em"><tspan x="0" y="0">Steffi-Ann Mendoza</tspan></text>
-					</svg>
+  <a href="index.html" alt id="logo"><img src="assets/images/Steffi-Ann Mendoza.png">
 			</a>
+
   <input class="menu-btn" type="checkbox" id="menu-btn" />
   <label class="menu-icon text" for="menu-btn"><span class="navicon"></span></label>
   <ul class="menu text-white" style="font-family: Moon Flower,MoonFlower; font-size: 35px;" >
@@ -106,12 +105,7 @@ $(document).on('lity:ready', function(event, $lightbox) {
 	</div>
 	<div class="font-sans container block mx-auto text-white text-lg flex-col p-3" alt="aboutText" style="font-family: 'Roboto';">
 		<p class="">
-				Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+				Steffi-Ann Mendoza is a student at California State University, Northridge. She is part of the Cinema and Television Arts program, with an emphasis on Multimedia Production. She has worked for KCET's Br</p>
 		<p class="">
 				Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
