--- a/index.html
+++ b/index.html
@@ -19,10 +19,9 @@
 <body>
 
 <header class="header p-3">
-  <a href="index.html" alt id="logo"><svg xmlns="http://www.w3.org/2000/svg" width="320" height="54" viewBox="0 0 320 54">
-	 				 <text id="Steffi-Ann_Mendoza" data-name="Steffi-Ann Mendoza" transform="translate(1 43)" fill="#fff" stroke="#fff" stroke-width="1" font-size="50" font-family="MoonFlower, Moon Flower" letter-spacing="0.05em"><tspan x="0" y="0">Steffi-Ann Mendoza</tspan></text>
-					</svg>
+  <a href="index.html" alt id="logo"><img src="assets/images/Steffi-Ann Mendoza.png">
 			</a>
+
   <input class="menu-btn" type="checkbox" id="menu-btn" />
   <label class="menu-icon text" for="menu-btn"><span class="navicon"></span></label>
   <ul class="menu text-white" style="font-family: Moon Flower,MoonFlower; font-size: 35px;" >
