Footer logo Changed

--- a/photography.html
+++ b/photography.html
@@ -144,10 +144,9 @@ $(document).on('lity:ready', function(event, $lightbox) {
 <!-- footer -->
 	<div class="w-screen flex justify-between items-center" style="background-color: #000000;" alt="footerBar">
 		<div class="mx-auto flex" alt="logo">
-			<a href="index.html"><svg xmlns="http://www.w3.org/2000/svg" width="320" height="54" viewBox="0 0 320 54">
-	 				 <text id="Steffi-Ann_Mendoza" data-name="Steffi-Ann Mendoza" transform="translate(1 43)" fill="#fff" stroke="#fff" stroke-width="1" font-size="50" font-family="MoonFlower, Moon Flower" letter-spacing="0.05em"><tspan x="0" y="0">Steffi-Ann Mendoza</tspan></text>
-					</svg>
+  <a href="index.html" alt id="logo"><img src="assets/images/Steffi-Ann Mendoza.png">
 			</a>
+
 		</div>
 		<footer class=" text-l flex text-white justify-between sm:mx-auto md:text-5xl" style="font-family: Moon Flower,MoonFlower;" alt="footer">
 			© 2019 All Rights Reserved
