--- a/photography.html
+++ b/photography.html
@@ -62,40 +62,40 @@ $(document).on('lity:ready', function(event, $lightbox) {
 <div class="flex flex-wrap w-full container mx-auto lg:-mx-4 mb-32">
 
   <div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
- <a href="gallery/image19.JPG" data-lity data-lity-desc="Four friends double exposed over flowers." data-title="Four Friends" data-desc="2016"><img src="gallery/image19.JPG" ></a></div>
+ <a href="gallery/image19.jpg" data-lity data-lity-desc="Four friends double exposed over flowers." data-title="Four Friends" data-desc="2016"><img src="gallery/image19.jpg" ></a></div>
 
   <div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
- <a href="gallery/image18.JPG" data-lity data-lity-desc="A cat and a headless bird double exposure" data-title="Untitled" data-desc="2016"><img src="gallery/image18.JPG"></a>  </div>
+ <a href="gallery/image18.jpg" data-lity data-lity-desc="A cat and a headless bird double exposure" data-title="Untitled" data-desc="2016"><img src="gallery/image18.jpg"></a>  </div>
 
   <div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
- <a href="gallery/image04.JPG" data-lity data-lity-desc="Neon signs double exposed." data-title="Double" data-desc="2016"><img src="gallery/image04.JPG"></a>  </div>
+ <a href="gallery/image04.jpg" data-lity data-lity-desc="Neon signs double exposed." data-title="Double" data-desc="2016"><img src="gallery/image04.jpg"></a>  </div>
 
   <div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
- <a href="gallery/image15.JPG" data-lity data-lity-desc="A boy sitting with his knees to his chest" data-title="John in Japan" data-desc="2017"><img src="gallery/image15.JPG"></a>  </div>
+ <a href="gallery/image15.jpg" data-lity data-lity-desc="A boy sitting with his knees to his chest" data-title="John in Japan" data-desc="2017"><img src="gallery/image15.jpg"></a>  </div>
 
   <div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
- <a href="gallery/image06.JPG" data-lity data-lity-desc="A woman with red hair holding a gun to her lips." data-title="Maritza" data-desc="2016"><img src="gallery/image06.JPG"></a>  </div>
+ <a href="gallery/image06.jpg" data-lity data-lity-desc="A woman with red hair holding a gun to her lips." data-title="Maritza" data-desc="2016"><img src="gallery/image06.jpg"></a>  </div>
 
   <div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
- <a href="gallery/image07.JPG" data-lity data-lity-desc="Japanese train station double exposed with the train patrons." data-title="Japanese Train Station" data-desc="2017"><img src="gallery/image07.JPG"></a>  </div>
+ <a href="gallery/image07.jpg" data-lity data-lity-desc="Japanese train station double exposed with the train patrons." data-title="Japanese Train Station" data-desc="2017"><img src="gallery/image07.jpg"></a>  </div>
 
   <div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
- <a href="gallery/image08.JPG" data-lity data-lity-desc="Inside a Japanese train." data-title="Japanese Train Station 2" data-desc="2017"><img src="gallery/image08.JPG"></a>  </div>
+ <a href="gallery/image08.jpg" data-lity data-lity-desc="Inside a Japanese train." data-title="Japanese Train Station 2" data-desc="2017"><img src="gallery/image08.jpg"></a>  </div>
 
   <div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
- <a href="gallery/image09.JPG" data-lity data-lity-desc="A train coming into the station." data-title="Japanese Train Station 3" data-desc="2017"><img src="gallery/image09.JPG"></a>  </div>
+ <a href="gallery/image09.jpg" data-lity data-lity-desc="A train coming into the station." data-title="Japanese Train Station 3" data-desc="2017"><img src="gallery/image09.jpg"></a>  </div>
 
   <div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
- <a href="gallery/image10.JPG" data-lity data-lity-desc="A Japanese Shrine" data-title="Untitled" data-desc="2017"><img src="gallery/image10.JPG"></a>  </div>
+ <a href="gallery/image10.jpg" data-lity data-lity-desc="A Japanese Shrine" data-title="Untitled" data-desc="2017"><img src="gallery/image10.jpg"></a>  </div>
 
   <div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
- <a href="gallery/image11.JPG" data-lity data-lity-desc="Japanese paper cranes." data-title="Cranes" data-desc="2017"><img src="gallery/image11.JPG"></a>  </div>
+ <a href="gallery/image11.jpg" data-lity data-lity-desc="Japanese paper cranes." data-title="Cranes" data-desc="2017"><img src="gallery/image11.jpg"></a>  </div>
 
   <div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
- <a href="gallery/image12.JPG" data-lity data-lity-desc="A headless bird over a bed of flowers" data-title="Untitled" data-desc="2018"><img src="gallery/image12.JPG"></a>  </div>
+ <a href="gallery/image12.jpg" data-lity data-lity-desc="A headless bird over a bed of flowers" data-title="Untitled" data-desc="2018"><img src="gallery/image12.jpg"></a>  </div>
 
   <div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
- <a href="gallery/image13.JPG" data-lity data-lity-desc="A busy street in Akihabara" data-title="Akihabara" data-desc="2017"><img src="gallery/image13.JPG"></a>  </div>
+ <a href="gallery/image13.jpg" data-lity data-lity-desc="A busy street in Akihabara" data-title="Akihabara" data-desc="2017"><img src="gallery/image13.jpg"></a>  </div>
 
 </div>
 </div>
