--- a/photography.html
+++ b/photography.html
@@ -109,20 +109,8 @@ $(document).on('lity:ready', function(event, $lightbox) {
 		<center><img src="assets/images/portrait.png" id="portrait" class="content-center h-1/2 md:h-full"></center>
 	</div>
 	<div class="font-sans container block mx-auto text-white text-lg flex-col p-3" alt="aboutText" style="font-family: 'Roboto';">
-		<p class="">
-				Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-		<p class="">
-				Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-			quis nostrud exercitation ullamco laboris nisi ut ali quip ex ea commodo
-			consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-			cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-			proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+<p class="">
+				Steffi-Ann Mendoza is a student at California State University, Northridge. She is part of the Cinema and Television Arts program, with an emphasis on Multimedia Production. She was the secretary for Los Angeles Pierce College's Film club, and she has worked as a Production intern for the CW television show <i>My Crazy Ex Girlfriend</i>.</p>
 	</div>
 </div>
 <!-- End Body -->
