Desc Added all pages

--- a/motion.html
+++ b/motion.html
@@ -105,7 +105,7 @@ $(document).on('lity:ready', function(event, $lightbox) {
 	</div>
 	<div class="font-sans container block mx-auto text-white text-lg flex-col p-3" alt="aboutText" style="font-family: 'Roboto';">
 		<p class="">
-				Steffi-Ann Mendoza is a student at California State University, Northridge. She is part of the Cinema and Television Arts program, with an emphasis on Multimedia Production. She was the secretary for Los Angeles Pierce College's Film club, and she has worked as a Production intern for the CW television show <i>My Crazy Ex Girlfriend</i>.</p>
+				Steffi-Ann Mendoza is a student at California State University, Northridge. She is part of the Cinema and Television Arts program, with an emphasis in Multimedia Production. She was the secretary for Los Angeles Pierce College's Film club, and she has worked as a Production intern for the CW television show <i>My Crazy Ex Girlfriend</i>.</p>
 	</div>
 </div>
 <!-- End Body -->
