--- a/motion.html
+++ b/motion.html
@@ -13,14 +13,13 @@
 		"text/javascript">
 		<link href="assets/webfontkit/stylesheet.css" rel="stylesheet">
 		<link href="assets/images/photos/favicon.png" rel="icon" type="image/png">
-		<meta charset="UTF-8">
 		<title>
 			Steffi-Ann Mendoza
 		</title>
 	</head>
 	<body>
 		<header class="header p-3">
-			<a alt="" href="index.html" id="logo"><img src=
+			<a href="index.html" id="logo"><img src=
 			"assets/images/Steffi-Ann%20Mendoza.png"></a> <input class="menu-btn" id=
 			"menu-btn" type="checkbox"> <label class="menu-icon text" for=
 			"menu-btn"><span class="navicon"></span></label>
@@ -40,7 +39,7 @@
 			</ul>
 		</header>
 
-		<nav alt="navBarDesktop" class=
+		<nav class="navBarDesktop" class=
 		"invisible md:visible md:text-5xl text-3xl flex text-white justify-between sm:mx-auto"
 		style="font-family: Moon Flower,MoonFlower;">
 			<a class="no-underline text-white" href="motion.html">Motion</a> | <a class=
@@ -176,7 +175,7 @@
 				<div alt="footerBar" class="w-screen flex justify-between items-center"
 				style="background-color: #000000;">
 					<div alt="logo" class="mx-auto flex">
-						<a alt="" href="index.html" id="logo"><img src=
+						<a href="index.html" id="logo"><img src=
 						"assets/images/Steffi-Ann%20Mendoza.png"></a>
 					</div>
 
