--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<meta charset="UTF-8">
 		<link href="https://cdn.jsdelivr.net/npm/tailwindcss/dist/tailwind.min.css"
 		rel="stylesheet">
 		<meta content="width=device-width, initial-scale=1.0" name="viewport">
@@ -20,7 +19,7 @@
 	</head>
 	<body>
 		<header class="header p-3">
-			<a alt="" href="index.html" id="logo"><img src=
+			<a href="index.html" id="logo"><img src=
 			"assets/images/Steffi-Ann%20Mendoza.png"></a> <input class="menu-btn" id=
 			"menu-btn" type="checkbox"> <label class="menu-icon text" for=
 			"menu-btn"><span class="navicon"></span></label>
@@ -40,7 +39,7 @@
 			</ul>
 		</header>
 
-		<nav alt="navBarDesktop" class=
+		<nav class="navBarDesktop" class=
 		"invisible md:visible md:text-5xl text-3xl flex text-white justify-between sm:mx-auto"
 		style="font-family: Moon Flower,MoonFlower;">
 			<a class="no-underline text-white" href="motion.html">Motion</a> | <a class=
@@ -122,7 +121,7 @@
 				<div alt="footerBar" class="w-screen flex justify-between items-center"
 				style="background-color: #000000;">
 					<div alt="logo" class="mx-auto flex">
-						<a alt="" href="index.html" id="logo"><img src=
+						<a href="index.html" id="logo"><img src=
 						"assets/images/Steffi-Ann%20Mendoza.png"></a>
 					</div>
 
