--- a/photography.html
+++ b/photography.html
@@ -11,7 +11,7 @@
 		<link href="styles/js/jquery-3.4.1.js" rel="stylesheet" type=
 		"text/javascript">
 		<link href="assets/webfontkit/stylesheet.css" rel="stylesheet">
-		<link href="assets/images/photos/favicon.png" rel="icon" type="image/png">
+		<link href="assets/Images/photos/favicon.png" rel="icon" type="Image/png">
 		<meta charset="UTF-8">
 		<title>
 			Steffi-Ann Mendoza
@@ -21,7 +21,7 @@
 		<div class="w-full">
 			<header class="header p-3 w-full">
 				<a href="index.html" id="logo"><img src=
-				"assets/images/Steffi-Ann%20Mendoza.png"></a> <input class="menu-btn" id=
+				"assets/Images/Steffi-Ann%20Mendoza.png"></a> <input class="menu-btn" id=
 				"menu-btn" type="checkbox"> <label class="menu-icon text" for=
 				"menu-btn"><span class="navicon"></span></label>
 				<ul class="menu text-white" style=
@@ -67,74 +67,74 @@
 						<div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
 							<a data-desc="2016" data-lity="" data-lity-desc=
 							"Four friends double exposed over flowers." data-title="Four Friends"
-							href="gallery/image19.jpg"><img src="gallery/image19.jpg"></a>
+							href="gallery/Image19.jpg"><img src="gallery/Image19.jpg"></a>
 						</div>
 
 						<div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
 							<a data-desc="2016" data-lity="" data-lity-desc=
 							"A cat and a headless bird double exposure" data-title="Untitled" href=
-							"gallery/image18.jpg"><img src="gallery/image18.jpg"></a>
+							"gallery/Image18.jpg"><img src="gallery/Image18.jpg"></a>
 						</div>
 
 						<div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
 							<a data-desc="2016" data-lity="" data-lity-desc=
 							"Neon signs double exposed." data-title="Double" href=
-							"gallery/image04.jpg"><img src="gallery/image04.jpg"></a>
+							"gallery/Image04.jpg"><img src="gallery/Image04.jpg"></a>
 						</div>
 
 						<div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
 							<a data-desc="2017" data-lity="" data-lity-desc=
 							"A boy sitting with his knees to his chest" data-title="John in Japan"
-							href="gallery/image15.jpg"><img src="gallery/image15.jpg"></a>
+							href="gallery/Image15.jpg"><img src="gallery/Image15.jpg"></a>
 						</div>
 
 						<div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
 							<a data-desc="2016" data-lity="" data-lity-desc=
 							"A woman with red hair holding a gun to her lips." data-title="Maritza"
-							href="gallery/image06.jpg"><img src="gallery/image06.jpg"></a>
+							href="gallery/Image06.jpg"><img src="gallery/Image06.jpg"></a>
 						</div>
 
 						<div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
 							<a data-desc="2017" data-lity="" data-lity-desc=
 							"Japanese train station double exposed with the train patrons."
-							data-title="Japanese Train Station" href="gallery/image07.jpg"><img src=
-							"gallery/image07.jpg"></a>
+							data-title="Japanese Train Station" href="gallery/Image07.jpg"><img src=
+							"gallery/Image07.jpg"></a>
 						</div>
 
 						<div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
 							<a data-desc="2017" data-lity="" data-lity-desc=
 							"Inside a Japanese train." data-title="Japanese Train Station 2" href=
-							"gallery/image08.jpg"><img src="gallery/image08.jpg"></a>
+							"gallery/Image08.jpg"><img src="gallery/Image08.jpg"></a>
 						</div>
 
 						<div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
 							<a data-desc="2017" data-lity="" data-lity-desc=
 							"A train coming into the station." data-title="Japanese Train Station 3"
-							href="gallery/image09.jpg"><img src="gallery/image09.jpg"></a>
+							href="gallery/Image09.jpg"><img src="gallery/Image09.jpg"></a>
 						</div>
 
 						<div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
 							<a data-desc="2017" data-lity="" data-lity-desc="A Japanese Shrine"
-							data-title="Untitled" href="gallery/image10.jpg"><img src=
-							"gallery/image10.jpg"></a>
+							data-title="Untitled" href="gallery/Image10.jpg"><img src=
+							"gallery/Image10.jpg"></a>
 						</div>
 
 						<div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
 							<a data-desc="2017" data-lity="" data-lity-desc="Japanese paper cranes."
-							data-title="Cranes" href="gallery/image11.jpg"><img src=
-							"gallery/image11.jpg"></a>
+							data-title="Cranes" href="gallery/Image11.jpg"><img src=
+							"gallery/Image11.jpg"></a>
 						</div>
 
 						<div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
 							<a data-desc="2018" data-lity="" data-lity-desc=
 							"A headless bird over a bed of flowers" data-title="Untitled" href=
-							"gallery/image12.jpg"><img src="gallery/image12.jpg"></a>
+							"gallery/Image12.jpg"><img src="gallery/Image12.jpg"></a>
 						</div>
 
 						<div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
 							<a data-desc="2017" data-lity="" data-lity-desc=
 							"A busy street in Akihabara" data-title="Akihabara" href=
-							"gallery/image13.jpg"><img src="gallery/image13.jpg"></a>
+							"gallery/Image13.jpg"><img src="gallery/Image13.jpg"></a>
 						</div>
 					</div>
 				</div>
@@ -147,7 +147,7 @@
 					"container-sm h-auto md:container-xl mx-auto pb-2">
 						<center>
 							<img class="content-center h-1/2 md:h-full" id="portrait" src=
-							"assets/images/portrait.png">
+							"assets/Images/portrait.png">
 						</center>
 					</div>
 
@@ -171,7 +171,7 @@
 				<div class="block w-full mx-auto">
 					<button class="block mt-24 mx-auto" onclick="toggle()" style=
 					"border: none; outline: none;"><img src=
-					"assets/images/email.png"></button>
+					"assets/Images/email.png"></button>
 					<p class="invisible text-2xl md:text-5xl font-black p-3 tracking-wide" id=
 					"email" style="font-family: MoonFlower, Moon Flower; text-align: center;">
 						steffiann.mendoza@gmail.com
@@ -180,10 +180,10 @@
 					<div alt="socialMedia" class=
 					"flex flex-col md:flex-row justify-between items-center pt-12 pl-12 pr-12 mb-32">
 						<a class="inline-block p-5" href="#"><img src=
-						"assets/images/twitter.png"></a> <a class="inline-block p-5" href=
-						"#"><img src="assets/images/linkdin.png"></a> <a class="inline-block p-5"
-						href="#"><img src="assets/images/vimeo.png"></a> <a class=
-						"inline-block p-5" href="#"><img src="assets/images/youtube.png"></a>
+						"assets/Images/twitter.png"></a> <a class="inline-block p-5" href=
+						"#"><img src="assets/Images/linkdin.png"></a> <a class="inline-block p-5"
+						href="#"><img src="assets/Images/vimeo.png"></a> <a class=
+						"inline-block p-5" href="#"><img src="assets/Images/youtube.png"></a>
 					</div>
 					<!-- footer -->
 
@@ -191,7 +191,7 @@
 					style="background-color: #000000;">
 						<div alt="logo" class="mx-auto flex">
 							<a href="index.html" id="logo"><img src=
-							"assets/images/Steffi-Ann%20Mendoza.png"></a>
+							"assets/Images/Steffi-Ann%20Mendoza.png"></a>
 						</div>
 
 						<footer alt="footer" class=
