--- a/photography.html
+++ b/photography.html
@@ -11,7 +11,7 @@
 		<link href="styles/js/jquery-3.4.1.js" rel="stylesheet" type=
 		"text/javascript">
 		<link href="assets/webfontkit/stylesheet.css" rel="stylesheet">
-		<link href="assets/Images/photos/favicon.png" rel="icon" type="Image/png">
+		<link href="assets/images/photos/favicon.png" rel="icon" type="Image/png">
 		<meta charset="UTF-8">
 		<title>
 			Steffi-Ann Mendoza
@@ -67,44 +67,44 @@
 						<div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
 							<a data-desc="2016" data-lity="" data-lity-desc=
 							"Four friends double exposed over flowers." data-title="Four Friends"
-							href="gallery/Image19.jpg"><img src="gallery/Image19.jpg"></a>
+							href="gallery/Image19.jpg"><img src="gallery/Image19.jpg" alt="Four friends double exposed over flowers"></a>
 						</div>
 
 						<div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
 							<a data-desc="2016" data-lity="" data-lity-desc=
 							"A cat and a headless bird double exposure" data-title="Untitled" href=
-							"gallery/Image18.jpg"><img src="gallery/Image18.jpg"></a>
+							"gallery/Image18.jpg"><img src="gallery/Image18.jpg" alt="A cat and a headless bird double exposure"></a>
 						</div>
 
 						<div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
 							<a data-desc="2016" data-lity="" data-lity-desc=
 							"Neon signs double exposed." data-title="Double" href=
-							"gallery/Image04.jpg"><img src="gallery/Image04.jpg"></a>
+							"gallery/Image04.jpg"><img src="gallery/Image04.jpg" alt="Neon signs double exposed"></a>
 						</div>
 
 						<div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
 							<a data-desc="2017" data-lity="" data-lity-desc=
 							"A boy sitting with his knees to his chest" data-title="John in Japan"
-							href="gallery/Image15.jpg"><img src="gallery/Image15.jpg"></a>
+							href="gallery/Image15.jpg"><img src="gallery/Image15.jpg" alt="A boy sitting with his knees to his chest"></a>
 						</div>
 
 						<div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
 							<a data-desc="2016" data-lity="" data-lity-desc=
 							"A woman with red hair holding a gun to her lips." data-title="Maritza"
-							href="gallery/Image06.jpg"><img src="gallery/Image06.jpg"></a>
+							href="gallery/Image06.jpg"><img src="gallery/Image06.jpg" alt="A woman with red hair holding a gun to her lips"></a>
 						</div>
 
 						<div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
 							<a data-desc="2017" data-lity="" data-lity-desc=
 							"Japanese train station double exposed with the train patrons."
 							data-title="Japanese Train Station" href="gallery/Image07.jpg"><img src=
-							"gallery/Image07.jpg"></a>
+							"gallery/Image07.jpg" alt="Japanese train station double exposed with the train patrons"></a>
 						</div>
 
 						<div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
 							<a data-desc="2017" data-lity="" data-lity-desc=
 							"Inside a Japanese train." data-title="Japanese Train Station 2" href=
-							"gallery/Image08.jpg"><img src="gallery/Image08.jpg"></a>
+							"gallery/Image08.jpg"><img src="gallery/Image08.jpg" alt="Inside a Japanese train"></a>
 						</div>
 
 						<div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
@@ -115,26 +115,26 @@
 
 						<div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
 							<a data-desc="2017" data-lity="" data-lity-desc="A Japanese Shrine"
-							data-title="Untitled" href="gallery/Image10.jpg"><img src=
+							data-title="Untitled" href="gallery/Image10.jpg" alt="A train coming into the station"><img src=
 							"gallery/Image10.jpg"></a>
 						</div>
 
 						<div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
 							<a data-desc="2017" data-lity="" data-lity-desc="Japanese paper cranes."
-							data-title="Cranes" href="gallery/Image11.jpg"><img src=
+							data-title="Cranes" href="gallery/Image11.jpg" alt="Japanese paper cranes"><img src=
 							"gallery/Image11.jpg"></a>
 						</div>
 
 						<div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
 							<a data-desc="2018" data-lity="" data-lity-desc=
 							"A headless bird over a bed of flowers" data-title="Untitled" href=
-							"gallery/Image12.jpg"><img src="gallery/Image12.jpg"></a>
+							"gallery/Image12.jpg"><img src="gallery/Image12.jpg" alt="A headless bird over a bed of flowers"></a>
 						</div>
 
 						<div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
 							<a data-desc="2017" data-lity="" data-lity-desc=
 							"A busy street in Akihabara" data-title="Akihabara" href=
-							"gallery/Image13.jpg"><img src="gallery/Image13.jpg"></a>
+							"gallery/Image13.jpg"><img src="gallery/Image13.jpg" alt="A busy street in Akihabara"></a>
 						</div>
 					</div>
 				</div>
