--- a/photography.html
+++ b/photography.html
@@ -40,7 +40,7 @@
 				</ul>
 			</header>
 
-			<nav class="navBarDesktop" class=
+			<nav class=
 			"invisible md:visible md:text-5xl text-3xl flex text-white justify-between sm:mx-auto"
 			style="font-family: Moon Flower,MoonFlower;">
 				<a class="no-underline text-white" href="motion.html">Motion</a> |
@@ -57,54 +57,65 @@
 				<script src="dist/lity.js">
 				</script> 
 				<script>
-				$(document).on('lity:ready', function(event, $lightbox) {
-				var $triggeringElement = $lightbox.opener();
-				$('.lity-content').append('<h2 class="text-white text-center">' + $triggeringElement.data('title') + '<\/h2><p class="text-grey-light text-center">' + $triggeringElement.data('desc') + '<\/p>');
-				});
+				            $(document).on('lity:ready', function(event, $lightbox) {
+				            var $triggeringElement = $lightbox.opener();
+				            $('.lity-content').append('<h2 class="text-white text-center">' + $triggeringElement.data('title') + '<\/h2><p class="text-grey-light text-center">' + $triggeringElement.data('desc') + '<\/p>');
+				            });
 				</script>
 				<div class="container mx-auto">
 					<div class="flex flex-wrap w-full container mx-auto lg:-mx-4 mb-32">
 						<div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
 							<a data-desc="2016" data-lity="" data-lity-desc=
 							"Four friends double exposed over flowers." data-title="Four Friends"
-							href="gallery/Image19.jpg"><img src="gallery/Image19.jpg" alt="Four friends double exposed over flowers"></a>
+							href="gallery/Image19.jpg"><img alt=
+							"Four friends double exposed over flowers" src=
+							"gallery/Image19.jpg"></a>
 						</div>
 
 						<div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
 							<a data-desc="2016" data-lity="" data-lity-desc=
 							"A cat and a headless bird double exposure" data-title="Untitled" href=
-							"gallery/Image18.jpg"><img src="gallery/Image18.jpg" alt="A cat and a headless bird double exposure"></a>
+							"gallery/Image18.jpg"><img alt=
+							"A cat and a headless bird double exposure" src=
+							"gallery/Image18.jpg"></a>
 						</div>
 
 						<div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
 							<a data-desc="2016" data-lity="" data-lity-desc=
 							"Neon signs double exposed." data-title="Double" href=
-							"gallery/Image04.jpg"><img src="gallery/Image04.jpg" alt="Neon signs double exposed"></a>
+							"gallery/Image04.jpg"><img alt="Neon signs double exposed" src=
+							"gallery/Image04.jpg"></a>
 						</div>
 
 						<div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
 							<a data-desc="2017" data-lity="" data-lity-desc=
 							"A boy sitting with his knees to his chest" data-title="John in Japan"
-							href="gallery/Image15.jpg"><img src="gallery/Image15.jpg" alt="A boy sitting with his knees to his chest"></a>
+							href="gallery/Image15.jpg"><img alt=
+							"A boy sitting with his knees to his chest" src=
+							"gallery/Image15.jpg"></a>
 						</div>
 
 						<div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
 							<a data-desc="2016" data-lity="" data-lity-desc=
 							"A woman with red hair holding a gun to her lips." data-title="Maritza"
-							href="gallery/Image06.jpg"><img src="gallery/Image06.jpg" alt="A woman with red hair holding a gun to her lips"></a>
+							href="gallery/Image06.jpg"><img alt=
+							"A woman with red hair holding a gun to her lips" src=
+							"gallery/Image06.jpg"></a>
 						</div>
 
 						<div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
 							<a data-desc="2017" data-lity="" data-lity-desc=
 							"Japanese train station double exposed with the train patrons."
-							data-title="Japanese Train Station" href="gallery/Image07.jpg"><img src=
-							"gallery/Image07.jpg" alt="Japanese train station double exposed with the train patrons"></a>
+							data-title="Japanese Train Station" href="gallery/Image07.jpg"><img alt=
+							"Japanese train station double exposed with the train patrons" src=
+							"gallery/Image07.jpg"></a>
 						</div>
 
 						<div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
 							<a data-desc="2017" data-lity="" data-lity-desc=
 							"Inside a Japanese train." data-title="Japanese Train Station 2" href=
-							"gallery/Image08.jpg"><img src="gallery/Image08.jpg" alt="Inside a Japanese train"></a>
+							"gallery/Image08.jpg"><img alt="Inside a Japanese train" src=
+							"gallery/Image08.jpg"></a>
 						</div>
 
 						<div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
@@ -114,27 +125,29 @@
 						</div>
 
 						<div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
-							<a data-desc="2017" data-lity="" data-lity-desc="A Japanese Shrine"
-							data-title="Untitled" href="gallery/Image10.jpg" alt="A train coming into the station"><img src=
-							"gallery/Image10.jpg"></a>
+							<a alt="A train coming into the station" data-desc="2017" data-lity=""
+							data-lity-desc="A Japanese Shrine" data-title="Untitled" href=
+							"gallery/Image10.jpg"><img src="gallery/Image10.jpg"></a>
 						</div>
 
 						<div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
-							<a data-desc="2017" data-lity="" data-lity-desc="Japanese paper cranes."
-							data-title="Cranes" href="gallery/Image11.jpg" alt="Japanese paper cranes"><img src=
-							"gallery/Image11.jpg"></a>
+							<a alt="Japanese paper cranes" data-desc="2017" data-lity=""
+							data-lity-desc="Japanese paper cranes." data-title="Cranes" href=
+							"gallery/Image11.jpg"><img src="gallery/Image11.jpg"></a>
 						</div>
 
 						<div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
 							<a data-desc="2018" data-lity="" data-lity-desc=
 							"A headless bird over a bed of flowers" data-title="Untitled" href=
-							"gallery/Image12.jpg"><img src="gallery/Image12.jpg" alt="A headless bird over a bed of flowers"></a>
+							"gallery/Image12.jpg"><img alt="A headless bird over a bed of flowers"
+							src="gallery/Image12.jpg"></a>
 						</div>
 
 						<div class="w-full overflow-hidden lg:my-4 lg:px-4 lg:w-1/2">
 							<a data-desc="2017" data-lity="" data-lity-desc=
 							"A busy street in Akihabara" data-title="Akihabara" href=
-							"gallery/Image13.jpg"><img src="gallery/Image13.jpg" alt="A busy street in Akihabara"></a>
+							"gallery/Image13.jpg"><img alt="A busy street in Akihabara" src=
+							"gallery/Image13.jpg"></a>
 						</div>
 					</div>
 				</div>
@@ -209,50 +222,50 @@
 			<script src="jquery.min.js">
 			</script> 
 			<script>
-			$(document).ready(function(){
-			$("a").on('click', function(event) {
+			         $(document).ready(function(){
+			         $("a").on('click', function(event) {
 
-			 if (this.hash !== "") {
-			   event.preventDefault();
+			          if (this.hash !== "") {
+			            event.preventDefault();
 
-			   var hash = this.hash;
+			            var hash = this.hash;
 
-			   $('html, body').animate({
-			     scrollTop: $(hash).offset().top
-			   }, 1000, function(){
+			            $('html, body').animate({
+			              scrollTop: $(hash).offset().top
+			            }, 1000, function(){
 
-			     window.location.hash = hash;
-			   });
-			 } 
-			});
-			});
+			              window.location.hash = hash;
+			            });
+			          } 
+			         });
+			         });
 			</script> 
 			<script>
-			 function toggle() {
-			     var element = document.getElementById("email");
-			     element.classList.toggle("invisible");
-			 }
+			          function toggle() {
+			              var element = document.getElementById("email");
+			              element.classList.toggle("invisible");
+			          }
 			</script> 
 			<script crossorigin="anonymous" integrity=
 			"sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" src=
 			"https://code.jquery.com/jquery-3.4.1.js">
 			</script> 
 			<script>
-			 var myIndex = 0;
-			 carousel();
+			          var myIndex = 0;
+			          carousel();
 
-			 function carousel() {
-			     var i;
-			     var x = document.getElementsByClassName("mySlides");
-			     for (i = 0; i < x.length; i++) {
-			        x[i].style.display = "none";  
-			     }
-			     myIndex++;
-			     if (myIndex > x.length) {myIndex = 1}    
-			     x[myIndex-1].style.display = "block";  
-			     setTimeout(carousel, 2000);
-			 }
-			</script> 
+			          function carousel() {
+			              var i;
+			              var x = document.getElementsByClassName("mySlides");
+			              for (i = 0; i < x.length; i++) {
+			                 x[i].style.display = "none";  
+			              }
+			              myIndex++;
+			              if (myIndex > x.length) {myIndex = 1}    
+			              x[myIndex-1].style.display = "block";  
+			              setTimeout(carousel, 2000);
+			          }
+			</script>
 		</div>
 	</body>
 </html>
