--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	<body>
 		<header class="header p-3">
 			<a href="index.html" id="logo"><img src=
-			"assets/images/Steffi-Ann%20Mendoza.png"></a> <input class="menu-btn" id=
+			"assets/images/Steffi-Ann%20Mendoza.png" alt="logo"></a> <input class="menu-btn" id=
 			"menu-btn" type="checkbox"> <label class="menu-icon text" for=
 			"menu-btn"><span class="navicon"></span></label>
 			<ul class="menu text-white" style=
@@ -99,37 +99,38 @@
 		</div>
 		<!-- contact -->
 
-		<div alt="" class="w-full h-full pt-32" id="contact">
-			<div class="block w-full mx-auto">
-				<button class="block mt-24 mx-auto" onclick="toggle()" style=
-				"border: none; outline: none;"><img src="assets/images/email.png"></button>
-				<p class="invisible text-2xl md:text-5xl font-black p-3 tracking-wide" id=
-				"email" style="font-family: MoonFlower, Moon Flower; text-align: center;">
-					steffiann.mendoza@gmail.com
-				</p>
+			<div class="w-full h-full pt-32" id="contact">
+				<div class="block w-full mx-auto">
+					<button class="block mt-24 mx-auto" onclick="toggle()" style=
+					"border: none; outline: none;"><img src=
+					"assets/Images/email.png"></button>
+					<p class="invisible text-2xl md:text-5xl font-black p-3 tracking-wide" id=
+					"email" style="font-family: MoonFlower, Moon Flower; text-align: center;">
+						steffiann.mendoza@gmail.com
+					</p>
 
-				<div alt="socialMedia" class=
-				"flex flex-col md:flex-row justify-between items-center pt-12 pl-12 pr-12 mb-32">
-					<a class="inline-block p-5" href="#"><img src=
-					"assets/images/twitter.png"></a> <a class="inline-block p-5" href=
-					"#"><img src="assets/images/linkdin.png"></a> <a class="inline-block p-5"
-					href="#"><img src="assets/images/vimeo.png"></a> <a class=
-					"inline-block p-5" href="#"><img src="assets/images/youtube.png"></a>
-				</div>
-				<!-- footer -->
-
-				<div alt="footerBar" class="w-screen flex justify-between items-center"
-				style="background-color: #000000;">
-					<div alt="logo" class="mx-auto flex">
-						<a href="index.html" id="logo"><img src=
-						"assets/images/Steffi-Ann%20Mendoza.png"></a>
+					<div alt="socialMedia" class=
+					"flex flex-col md:flex-row justify-between items-center pt-12 pl-12 pr-12 mb-32">
+						<a class="inline-block p-5" href="#"><img src=
+						"assets/Images/twitter.png" alt="twitter"></a> <a class="inline-block p-5" href=
+						"#"><img src="assets/Images/linkdin.png" alt="linkdin"></a> <a class="inline-block p-5"
+						href="#"><img src="assets/Images/vimeo.png" alt="vimeo"></a> <a class=
+						"inline-block p-5" href="#"><img src="assets/Images/youtube.png" alt="youtube"></a>
 					</div>
+					<!-- footer -->
 
-					<footer alt="footer" class=
-					" text-l flex text-white justify-between sm:mx-auto md:text-5xl" style=
-					"font-family: Moon Flower,MoonFlower;">
-						© 2019 All Rights Reserved
-					</footer>
+					<div alt="footerBar" class="w-screen flex justify-between items-center"
+					style="background-color: #000000;">
+						<div alt="logo" class="mx-auto flex">
+							<a href="index.html"><img src=
+							"assets/Images/Steffi-Ann%20Mendoza.png" alt="logo"></a>
+						</div>
+
+						<footer class="footer" class=
+						" text-l flex text-white justify-between sm:mx-auto md:text-5xl" style=
+						"font-family: Moon Flower,MoonFlower;">
+							© 2019 All Rights Reserved
+						</footer>
 				</div>
 			</div>
 		</div>
