--- a/photography.html
+++ b/photography.html
@@ -20,8 +20,8 @@
 	<body>
 		<div class="w-full">
 			<header class="header p-3 w-full">
-				<a href="index.html" id="logo"><img src=
-				"assets/Images/Steffi-Ann%20Mendoza.png"></a> <input class="menu-btn" id=
+				<a href="index.html"><img src=
+				"assets/Images/Steffi-Ann%20Mendoza.png" alt="logo"></a> <input class="menu-btn" id=
 				"menu-btn" type="checkbox"> <label class="menu-icon text" for=
 				"menu-btn"><span class="navicon"></span></label>
 				<ul class="menu text-white" style=
@@ -180,7 +180,7 @@
 			</div>
 			<!-- contact -->
 
-			<div alt="" class="w-full h-full pt-32" id="contact">
+			<div class="w-full h-full pt-32" id="contact">
 				<div class="block w-full mx-auto">
 					<button class="block mt-24 mx-auto" onclick="toggle()" style=
 					"border: none; outline: none;"><img src=
@@ -193,21 +193,21 @@
 					<div alt="socialMedia" class=
 					"flex flex-col md:flex-row justify-between items-center pt-12 pl-12 pr-12 mb-32">
 						<a class="inline-block p-5" href="#"><img src=
-						"assets/Images/twitter.png"></a> <a class="inline-block p-5" href=
-						"#"><img src="assets/Images/linkdin.png"></a> <a class="inline-block p-5"
-						href="#"><img src="assets/Images/vimeo.png"></a> <a class=
-						"inline-block p-5" href="#"><img src="assets/Images/youtube.png"></a>
+						"assets/Images/twitter.png" alt="twitter"></a> <a class="inline-block p-5" href=
+						"#"><img src="assets/Images/linkdin.png" alt="linkdin"></a> <a class="inline-block p-5"
+						href="#"><img src="assets/Images/vimeo.png" alt="vimeo"></a> <a class=
+						"inline-block p-5" href="#"><img src="assets/Images/youtube.png" alt="youtube"></a>
 					</div>
 					<!-- footer -->
 
 					<div alt="footerBar" class="w-screen flex justify-between items-center"
 					style="background-color: #000000;">
 						<div alt="logo" class="mx-auto flex">
-							<a href="index.html" id="logo"><img src=
-							"assets/Images/Steffi-Ann%20Mendoza.png"></a>
+							<a href="index.html"><img src=
+							"assets/Images/Steffi-Ann%20Mendoza.png" alt="logo"></a>
 						</div>
 
-						<footer alt="footer" class=
+						<footer class="footer" class=
 						" text-l flex text-white justify-between sm:mx-auto md:text-5xl" style=
 						"font-family: Moon Flower,MoonFlower;">
 							© 2019 All Rights Reserved
