--- a/photography.html
+++ b/photography.html
@@ -184,7 +184,7 @@
 				<div class="block w-full mx-auto">
 					<button class="block mt-24 mx-auto" onclick="toggle()" style=
 					"border: none; outline: none;"><img src=
-					"assets/Images/email.png"></button>
+					"assets/images/email.png" alt="email"></button>
 					<p class="invisible text-2xl md:text-5xl font-black p-3 tracking-wide" id=
 					"email" style="font-family: MoonFlower, Moon Flower; text-align: center;">
 						steffiann.mendoza@gmail.com
@@ -193,9 +193,9 @@
 					<div alt="socialMedia" class=
 					"flex flex-col md:flex-row justify-between items-center pt-12 pl-12 pr-12 mb-32">
 						<a class="inline-block p-5" href="#"><img src=
-						"assets/Images/twitter.png" alt="twitter"></a> <a class="inline-block p-5" href=
-						"#"><img src="assets/Images/linkdin.png" alt="linkdin"></a> <a class="inline-block p-5"
-						href="#"><img src="assets/Images/vimeo.png" alt="vimeo"></a> <a class=
+						"assets/images/twitter.png" alt="twitter"></a> <a class="inline-block p-5" href=
+						"#"><img src="assets/images/linkdin.png" alt="linkdin"></a> <a class="inline-block p-5"
+						href="#"><img src="assets/images/vimeo.png" alt="vimeo"></a> <a class=
 						"inline-block p-5" href="#"><img src="assets/Images/youtube.png" alt="youtube"></a>
 					</div>
 					<!-- footer -->
@@ -204,7 +204,7 @@
 					style="background-color: #000000;">
 						<div alt="logo" class="mx-auto flex">
 							<a href="index.html"><img src=
-							"assets/Images/Steffi-Ann%20Mendoza.png" alt="logo"></a>
+							"assets/images/Steffi-Ann%20Mendoza.png" alt="logo"></a>
 						</div>
 
 						<footer class="footer" class=
@@ -212,9 +212,9 @@
 						"font-family: Moon Flower,MoonFlower;">
 							© 2019 All Rights Reserved
 						</footer>
-					</div>
 				</div>
 			</div>
+		</div>
 			<!-- End Footer -->
 			<script src=
 			"https://ajax.googleapis.com/ajax/libs/jquery/3.4.0/jquery.min.js">
