--- a/photography.html
+++ b/photography.html
@@ -160,7 +160,7 @@
 					"container-sm h-auto md:container-xl mx-auto pb-2">
 						<center>
 							<img class="content-center h-1/2 md:h-full" id="portrait" src=
-							"assets/Images/portrait.png">
+							"assets/images/portrait.png">
 						</center>
 					</div>
 
